# LimpioFueraAdentro

./: .gitignore  CMakeLists.txt  cargaguarda.c  cargaguarda.h  estructuras.h  funciones.c  funciones.h  globales.c  globales.h  main (Jesús’s MacBook Pro's conflicted copy 2018-11-12).c  main.c  readme_rama.txt  solucion.c  solucion.h
